@@ -1,7 +1,15 @@
 name    = App-DuckDuckGo
 author  = Torsten Raudssus <torsten@raudssus.de>
 license = Perl_5
-copyright_holder = Torsten Raudssus
+copyright_holder = L<Raudssus Social Software|http://www.raudssus.de/>
 copyright_year   = 2011
 
 [@GETTY]
+
+[Prereqs]
+Moose = 1.24
+MooseX::Getopt = 0.35
+WWW::DuckDuckGo = 0.001
+
+[Prereqs / TestRequires]
+Test::More = 0.90
