@@ -1,0 +1,11 @@
+#!/usr/bin/perl
+
+use strict;
+use warnings;
+use Test::More;
+
+BEGIN {
+    use_ok('App::DuckDuckGo');
+}
+
+done_testing;
