@@ -1,3 +1,4 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+	- First release (more docs and tests required)
